# ChangeLog for dev-ruby/paper_trail
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Dec 2011; Hans de Graaff <graaff@gentoo.org> paper_trail-2.5.0.ebuild:
  Add x86 keyword.

*paper_trail-2.5.0 (25 Nov 2011)

  25 Nov 2011; Hans de Graaff <graaff@gentoo.org> +paper_trail-2.5.0.ebuild:
  Version bump.

*paper_trail-2.4.0 (12 Oct 2011)

  12 Oct 2011; Hans de Graaff <graaff@gentoo.org> +paper_trail-2.4.0.ebuild:
  Version bump.

*paper_trail-2.2.9 (17 Aug 2011)
*paper_trail-1.6.5 (17 Aug 2011)

  17 Aug 2011; Hans de Graaff <graaff@gentoo.org> +paper_trail-1.6.5.ebuild,
  +paper_trail-2.2.9.ebuild, +metadata.xml:
  Initial import.
