@@ -5,16 +5,11 @@ DIST paper_trail-1.6.5.gem 21504 RMD160 8df33e83ac7eedcdd64e78d20217f3cff7753511
 DIST paper_trail-2.2.9.gem 97792 RMD160 8d4e29da2fe9fb33b1068ef0e2a2a0515ae68649 SHA1 ece58810f1d4341db906dc1dabe1dffa39421b3c SHA256 2768b1347e60ba5758602aecc4f6757d86c4bd032f66c09e544c1b7ef2efb951
 DIST paper_trail-2.4.0.gem 99328 RMD160 e53b098f190597110e2e50fb25cb31afeaff3b56 SHA1 d9cedd381f8a8fd911f9a0461dfe339cbca79e61 SHA256 2684966da61fbdc58f234b984083b69f1228f9ea77df2a456db96257f36f5b24
 DIST paper_trail-2.5.0.gem 100352 RMD160 aa5c23376525f7f3feac73ca30152800f185ee10 SHA1 e2133dfba0e0472b47ed78e2a916c5e1bcd6986d SHA256 70395bf4ff4eae0417eb66a64d1a786b6917b2f1e70e2ffd4a4f210dbb14b732
-EBUILD paper_trail-1.6.5.ebuild 575 RMD160 3ba8a3b9a5972ae11c67a58a50095dbd43e7b798 SHA1 50fc52ed38619862742e335131a7ccfb8a735787 SHA256 df4b62bbe8213764ceb72c4e4fb9be0309c9e050d5e73b8db68afa154b7cad01
-EBUILD paper_trail-2.2.9.ebuild 615 RMD160 8175434cf58afad620c86865ca3d294add7be905 SHA1 304349e40bb20bb5b56e602c8b33e3285c176c8c SHA256 f2df4100fcc3f601d345eeb5e374fe61bca6a633c21f272946c31736180f0717
-EBUILD paper_trail-2.4.0.ebuild 615 RMD160 8175434cf58afad620c86865ca3d294add7be905 SHA1 304349e40bb20bb5b56e602c8b33e3285c176c8c SHA256 f2df4100fcc3f601d345eeb5e374fe61bca6a633c21f272946c31736180f0717
-EBUILD paper_trail-2.5.0.ebuild 620 RMD160 21fbdb157fa5817b583f90d750f993e0eeab6d6c SHA1 635cb4da8e8fa3e6eedc865255d5525e9ab780bf SHA256 5ad2b3628eb569ead0642c3a58e8007d9852397955fc4ef327f95e34fbd76107
-MISC ChangeLog 680 RMD160 89078c9f7fd46d603293f342a5007debe6f25e4d SHA1 0e2a9eec7b350e396a0f586a5c9766228145d435 SHA256 855f0030442ac55247f893f6af506a29e0be7cfd14c29cf1eafa8b397717c564
-MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
+DIST paper_trail-2.6.0.gem 98304 RMD160 3e02cafaecd2f88dfd595f4ac40434e1e6aa2608 SHA1 91425eef9a0fa5491ef4433e1fc16392061972be SHA256 1b071e324870aed9b8b0e95909af28be4292be82c1ad91e23a8d99abc945d667
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk7Xd1UACgkQiIP6VqMIqNeh8AD/QxddGQxvF6RC2aZEvRtJxXqW
-wZtOLk2sfbuXpYRjkCAA/Ro8ghNCq1N9dGddMzbhcozr/tOQ1d8qGq3WxgNrIyPQ
-=fdY4
+iF4EAREIAAYFAk9Z+SYACgkQiIP6VqMIqNcamQD/c6SEOJIxFuGbB4AFwXnHID5l
+0y6KvoEqGtPM4Jbfr68A/jpK+R2yiCh5Vx1P5TRppnqSr9KRv7X/YJf6KASTQuiI
+=zpaW
 -----END PGP SIGNATURE-----
