@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/paper_trail
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*paper_trail-2.6.0 (09 Mar 2012)
+
+  09 Mar 2012; Hans de Graaff <graaff@gentoo.org> +paper_trail-2.6.0.ebuild:
+  Version bump.
 
   01 Dec 2011; Hans de Graaff <graaff@gentoo.org> paper_trail-2.5.0.ebuild:
   Add x86 keyword.
